# gamerat

./: .actrc  .editorconfig  .gitignore  Cargo.toml  Justfile  NOTICE  README.md  clippy.toml  crowdin.yml  preliminary-design.md  rust-toolchain.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  miri.yml  release.yml
crates/gamerat-cli/: Cargo.toml
crates/gamerat-cli/src/: main.rs
crates/gamerat-daemon/: Cargo.toml
crates/gamerat-daemon/src/: allocator.rs  dispatch.rs  dpi_tracker.rs  import.rs  kwin_bridge.rs  lib.rs  main.rs  manual_games.rs  paths.rs  profiles.rs  rules.rs  service.rs  settings.rs  soft_macros.rs
crates/gamerat-focus/: Cargo.toml
crates/gamerat-focus/src/: fixture.rs  lib.rs  wlr.rs
crates/gamerat-gamedb/: Cargo.toml
crates/gamerat-gamedb/src/: error.rs  heroic.rs  lib.rs  lutris.rs  steam.rs
crates/gamerat-gui/: .gitignore  Cargo.toml  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
crates/gamerat-gui/messages/: README.md  ca.json  de.json  en.json  he.json  hu.json  sv.json
crates/gamerat-gui/project.inlang/: settings.json
crates/gamerat-gui/public/: mice
crates/gamerat-gui/src/: App.svelte  app.css  main.rs  main.ts
crates/gamerat-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/gamerat-gui/src-tauri/capabilities/: default.json
crates/gamerat-gui/src-tauri/icons/: README.md
crates/gamerat-gui/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/gamerat-gui/src/lib/: AutoswitchToggle.svelte  ButtonBindingEditor.svelte  DaemonGate.svelte  DevPanel.svelte  DevicesPanel.svelte  FocusSimulate.svelte  GamesPanel.svelte  Icon.svelte  KeyCapture.svelte  LedColorEditor.svelte  MacroRecorder.svelte  Modal.svelte  MouseView.svelte  ProfilesPanel.svelte  RulesPanel.svelte  Select.svelte  SettingsModal.svelte  SignalStream.svelte  StatusCard.svelte  ThemeToggle.svelte  Titlebar.svelte  WindowResizeHandles.svelte  button-labels.test.ts  button-labels.ts  chord.test.ts  chord.ts  dev-log.test.ts  dev-log.ts  device-defaults.ts  ipc.ts  keycode-map.test.ts  keycode-map.ts  locale.ts  mouse-view-helpers.test.ts  mouse-view-helpers.ts  profile-edit.test.ts  profile-edit.ts  svg-lookup.ts  svg-prep.test.ts  svg-prep.ts  (+6 more)
crates/gamerat-gui/tests/a11y/: axe-gate.ts  canary.spec.ts  contrast.spec.ts  tauri-mock.ts
crates/gamerat-input/: Cargo.toml
crates/gamerat-input/src/: discovery.rs  evdev_backend.rs  lib.rs  uinput.rs
crates/gamerat-proto/: Cargo.toml
crates/gamerat-proto/src/: compat.rs  lib.rs  macro_balance.rs  proxy.rs  types.rs
crates/gamerat-ratbag/: Cargo.toml
crates/gamerat-ratbag/src/: button.rs  caps.rs  client.rs  error.rs  lib.rs  proxy.rs
data/dbus/: README.md  org.appulsauce.GameRat1.xml
data/fixtures/focus/: example.toml  real-kwin-daily.toml  real-kwin-gaming.toml
data/icons/: README.md
data/kwin-script/: README.md
data/kwin-script/gamerat-focus/: metadata.json
data/kwin-script/gamerat-focus/contents/code/: main.js
data/mice/: ATTRIBUTION.md  README.md
data/ratbagd/: button.xml  device.xml  led.xml  manager.xml  profile.xml  resolution.xml
docs/: README.md
packaging/: README.md
packaging/arch/: PKGBUILD  README.md  gamerat-daemon.service  gamerat.desktop  gamerat.install
packaging/debian/: postinst  postrm
packaging/flatpak/: README.md
packaging/modules-load/: gamerat-uinput.conf
packaging/systemd/: README.md  gamerat-daemon.service  gamerat.service
packaging/tarball/: install.sh  uninstall.sh
packaging/udev/: 60-gamerat-uinput.rules
patches/libratbag/: 0001-refresh-active-resolution.patch  0002-cheap-set-active-profile.patch  README.md
scripts/: act-smoke.sh  bench_apply_paths.py  build-tarball.sh  check_ratbagd_drift.py  install-kwin-script.sh  install-smoke.sh  miri.sh  refresh_ratbagd_xml.py  stamp-version.sh  sync_libratbag_devices.py  sync_piper_svgs.py
