[package]
name = "gamerat-daemon"
description = "The gamerat long-running service. Talks ratbagd, watches focus, applies profiles."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[lib]
name = "gamerat_daemon"
path = "src/lib.rs"

[[bin]]
name = "gamerat-daemon"
path = "src/main.rs"

[dependencies]
gamerat-proto = { path = "../gamerat-proto" }
gamerat-ratbag = { path = "../gamerat-ratbag" }
gamerat-focus = { path = "../gamerat-focus" }
gamerat-gamedb = { path = "../gamerat-gamedb" }


# Async runtime + zbus
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
zbus = { workspace = true }

# CLI + config + glob
clap = { workspace = true }
toml = { workspace = true }
globset = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }

# Errors + logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
