[package]
name = "gamerat-gamedb"
description = "Library scanners for Steam, Lutris, Heroic, and other game launchers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
directories.workspace = true
keyvalues-serde = "0.2.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
