[package]
name = "gamerat-gui"
description = "Slint-based desktop frontend for the gamerat daemon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[[bin]]
name = "gamerat-gui"
path = "src/main.rs"

[dependencies]
gamerat-proto = { path = "../gamerat-proto" }
