[package]
name = "gamerat-input"
description = "evdev reader + uinput emitter that backs the daemon's soft-macro pipeline."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
gamerat-proto = { path = "../gamerat-proto" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
evdev = { workspace = true }
udev = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
